--- a/build.gradle
+++ b/build.gradle
@@ -10,8 +10,11 @@
 // Apply the java plugin to add support for Java
 plugins {
     id 'java'
+    id 'edu.sc.seis.launch4j' version '3.0.5'
 }
-
+launch4j {
+    mainClassName = 'SwingDemo'
+}
 // In this section you declare where to find the dependencies of your project
 repositories {
     // Use 'jcenter' for resolving your dependencies.
